--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
-    "astro": "^5.17.1"
+    "astro": "^5.17.1",
+    "astro-google-analytics": "^1.0.3"
   }
 }
